<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif"
        android:text="@string/escolhaUm"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTodosOsEstados"
        android:layout_width="355dp"
        android:layout_height="59dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/todosEstados"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnTodosOsPaises"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectUF" />

    <Button
        android:id="@+id/btnTodosOsPaises"
        android:layout_width="355dp"
        android:layout_height="59dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="259dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/todosPaises"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTodosOsEstados" />

    <EditText
        android:id="@+id/selectUF"
        android:layout_width="276dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="9dp"
        android:ems="10"
        android:hint="@string/ufHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/btnProcurar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/btnProcurar"
        android:layout_width="42dp"
        android:layout_height="32dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="42dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/selectUF"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search" />

</androidx.constraintlayout.widget.ConstraintLayout>